--- a/src/app/components/media/media.list.component.css
+++ b/src/app/components/media/media.list.component.css
@@ -46,3 +46,20 @@
     margin: 0;
   }
 }
+
+.select-overlay {
+  width: 126px;
+  height: 126px;
+  position:absolute;
+  background-color: rgba(138, 138, 138, 0.65);
+  z-index:100;
+  cursor: pointer;
+}
+
+.select-overlay > svg {
+  margin-top: 10px;
+  margin-right: 10px;
+  float: right;
+  height: 25px;
+  width: 25px;
+}
