--- a/src/app/components/media/media.list.component.html
+++ b/src/app/components/media/media.list.component.html
@@ -8,6 +8,30 @@
   </div>
   <div *ngIf="!filter" class="grid">
     <div *ngFor="let m of media" class="module">
+      <div class="select-overlay" *ngIf="multiselect">
+        <ng-template [ngIf]="!selected.has(m)" [ngIfElse]="chosen">
+          <svg class="bi bi-square" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" (click)="selectMedia(m)">
+            <path fill-rule="evenodd" d="M14 1H2a1 1 0 00-1 1v12a1 1 0 001 1h12a1 1 0 001-1V2a1 1 0 00-1-1zM2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2z" clip-rule="evenodd"/>
+          </svg>
+        </ng-template>
+        <ng-template #chosen>
+          <svg class="bi bi-square-fill" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" (click)="unselectMedia(m)">
+            <rect width="16" height="16" rx="2"/>
+          </svg>
+        </ng-template>
+        <ng-template [ngIf]="rangeStart == null" [ngIfElse]="rangeendtemplate">
+          <svg class="bi bi-skip-end" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" (click)="startRange(m)">
+            <path fill-rule="evenodd" d="M12 3.5a.5.5 0 01.5.5v8a.5.5 0 01-1 0V4a.5.5 0 01.5-.5z" clip-rule="evenodd"/>
+            <path fill-rule="evenodd" d="M10.804 8L5 4.633v6.734L10.804 8zm.792-.696a.802.802 0 010 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696l6.363 3.692z" clip-rule="evenodd"/>
+          </svg>
+        </ng-template>
+        <ng-template #rangeendtemplate>
+          <svg class="bi bi-skip-end-fill" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" (click)="endRange(m)">
+            <path fill-rule="evenodd" d="M12 3.5a.5.5 0 01.5.5v8a.5.5 0 01-1 0V4a.5.5 0 01.5-.5z" clip-rule="evenodd"/>
+            <path d="M11.596 8.697l-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 010 1.393z"/>
+          </svg>
+        </ng-template>
+      </div>
       <a>
         <img src="{{m.urlThumb}}" alt="{{m.urlThumb}}" [routerLink]="['/media/' + m.id]" />
       </a>
