Implemented Mediaupload and removed old tag system

--- a/src/app/components/media/media.component.html
+++ b/src/app/components/media/media.component.html
@@ -100,7 +100,7 @@
                     [selectable]="false"
                     [removable]="true"
                     (removed)="removeTag(tag)">
-                    {{ tag.name }}
+                    {{ tag }}
                     <mat-icon matChipRemove>cancel</mat-icon>
                   </mat-chip>
                   <input
@@ -113,8 +113,8 @@
                     (matChipInputTokenEnd)="addTag($event)">
                 </mat-chip-list>
                 <mat-autocomplete autoActivateFirstOption #auto="matAutocomplete" (optionSelected)="selectedTag($event)">
-                  <mat-option *ngFor="let tag of tagAutoComplete$ | async; let index = index" [value]="tag.name">
-                    {{ tag.name }}
+                  <mat-option *ngFor="let tag of tagAutoComplete$ | async; let index = index" [value]="tag">
+                    {{ tag }}
                   </mat-option>
                 </mat-autocomplete>
               </mat-form-field>
@@ -148,7 +148,7 @@
                     *ngFor="let group of localGroups"
                     [selectable]="false"
                     [removable]="true"
-                    (removed)="localGroups = removeItem(group, localGroups)">
+                    (removed)="removeGroup(group)">
                     {{ group.title }}
                     <mat-icon matChipRemove>cancel</mat-icon>
                   </mat-chip>
