--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,8 @@
       <input matInput placeholder="Filter" type="text" [formControl]="tagInput"
         [matAutocomplete]="auto">
       <mat-autocomplete autoActivateFirstOption #auto="matAutocomplete">
-        <mat-option *ngFor="let tag of tagAutoComplete$ | async; let index = index" [value]="tag.name">
-          {{ tag.name }}
+        <mat-option *ngFor="let tag of tagAutoComplete$ | async; let index = index" [value]="tag">
+          {{ tag }}
         </mat-option>
       </mat-autocomplete>
     </mat-form-field>
