--- a/src/app/components/setting/setting.component.html
+++ b/src/app/components/setting/setting.component.html
@@ -60,10 +60,104 @@
         <div class="col-md-12">
           <div class="input-group mb-3">
             <div class="input-group-prepend">
-              <button mat-stroked-button color="primary" class="btn btn-outline-secondary" (click)="getInviteToken()">Generate Invite</button>
+              <button mat-stroked-button color="primary" class="btn btn-outline-secondary"
+                (click)="getInviteToken()">Generate Invite</button>
             </div>
-            <input type="text" class="form-control" placeholder="Token" aria-label="Token" [(ngModel)]="inviteToken" readonly>
+            <input type="text" class="form-control" placeholder="Token" aria-label="Token" [(ngModel)]="inviteToken"
+              readonly>
           </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="float-left">
+            <h2>IPFSNodes</h2>
+          </div>
+          <div class="float-right">
+            <button mat-icon-button aria-label="Add Node" (click)="nodes.unshift({title:'&lt;New Node&gt;'})">
+              <mat-icon>add</mat-icon>
+            </button>
+          </div>
+          <div class="float-none"></div><br>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <mat-accordion>
+            <mat-expansion-panel *ngFor="let node of nodes; let i = index" [expanded]="(i === 0 && node.id == null) ? true : false">
+              <mat-expansion-panel-header>
+                <mat-panel-title>
+                  <b>{{node.title}}</b>
+                </mat-panel-title>
+              </mat-expansion-panel-header>
+              <ng-template matExpansionPanelContent>
+                <div class="container">
+                  <div class="row">
+                    <div class="col-6">
+                      <mat-form-field class="full-width-input">
+                        <input matInput placeholder="Title" [value]="node.title" (input)="node.title = $event.target.value">
+                      </mat-form-field>
+                    </div>
+                    <div class="col-6">
+                      <!-- <mat-form-field appearance="fill"> -->
+                      <mat-form-field class="full-width-input">
+                        <mat-label>Select type</mat-label>
+                        <mat-select disableRipple [(value)]="node.type">
+                          <mat-option value="ipfs">IPFS</mat-option>
+                          <mat-option value="web">WEB</mat-option>
+                        </mat-select>
+                      </mat-form-field>
+
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-6">
+                      <mat-form-field class="full-width-input">
+                        <input matInput placeholder="Username" [value]="node.username" (input)="node.username = $event.target.value">
+                      </mat-form-field>
+                    </div>
+                    <div class="col-6">
+                      <mat-form-field class="full-width-input">
+                        <input matInput placeholder="Password" [value]="node.password" (input)="node.password = $event.target.value">
+                      </mat-form-field>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-6">
+                      <mat-form-field class="full-width-input">
+                        <input matInput placeholder="Address" [value]="node.address" (input)="node.address = $event.target.value">
+                      </mat-form-field>
+                    </div>
+                    <div class="col-6">
+                      <mat-form-field class="full-width-input">
+                        <input matInput placeholder="IPFS API Port" [value]="node.ipfsApiPort" (input)="node.ipfsApiPort = parseNumber($event.target.value, 10)">
+                      </mat-form-field>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-6">
+                      <mat-form-field class="full-width-input">
+                        <input matInput placeholder="IPFS API URL" [value]="node.ipfsApiUrl" (input)="node.ipfsApiUrl = $event.target.value">
+                      </mat-form-field>
+                    </div>
+                    <div class="col-6">
+                      <mat-form-field class="full-width-input">
+                        <input matInput placeholder="IPFS Gateway" [value]="node.ipfsGateway" (input)="node.ipfsGateway = $event.target.value">
+                      </mat-form-field>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12">
+                      <div class="float-right">
+                        <button type="button" class="btn btn-outline-success mr-2" (click)="saveNode(i)">Save</button>
+                        <button type="button" class="btn btn-outline-danger" (click)="deleteNode(i)">Delete</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </ng-template>
+            </mat-expansion-panel>
+          </mat-accordion>
         </div>
       </div>
     </div>
