--- a/src/app/components/upload/upload.component.html
+++ b/src/app/components/upload/upload.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-xl">
   <div class="row" *ngIf="alertMessage !== ''">
     <div class="col-12">
       <div class="alert alert-warning" role="alert">
@@ -46,7 +46,7 @@
             </mat-panel-description>
           </mat-expansion-panel-header>
           <ng-template matExpansionPanelContent>
-            <div class="container">
+            <div class="container-xl">
               <div class="row">
                 <div class="col-6">
                   <mat-form-field class="full-width-input">
@@ -106,7 +106,7 @@
             </mat-panel-description>
           </mat-expansion-panel-header>
           <ng-template matExpansionPanelContent>
-            <div class="container">
+            <div class="container-xl">
               <div class="row">
                 <div class="col-md-3">
                   <img [src]="imgURL" class="image-preview">
