--- a/src/app/components/event/event.list.component.html
+++ b/src/app/components/event/event.list.component.html
@@ -1,15 +1,14 @@
-<mat-card class="example-card" *ngFor="let event of events" [routerLink]="['/event/' + event.id]">
-  <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>{{event.title}}</mat-card-title>
-    <mat-card-subtitle>{{event.timestampStart * 1000 | date: 'dd.MM.yyy'}} - {{event.timestampEnd * 1000 | date: 'dd.MM.yyy'}}</mat-card-subtitle>
-  </mat-card-header>
-  <img mat-card-image src="{{event.urlThumb}}" alt="{{event.urlThumb}}">
-  <mat-card-content>
-    <p>
-      The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-      A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-      bred for hunting.
-    </p>
-  </mat-card-content>
-</mat-card>
+<div class="container-xl">
+  <div class="row m-0">
+    <div class="col-xl-3 col-lg-4 col-md-6 col-12 p-1" *ngFor="let event of events" [routerLink]="['/event/' + event.id]">
+      <div class="card" style="height: 100%;">
+        <img src="{{event.urlThumb}}" class="card-img-top" alt="{{event.urlThumb}}">
+        <div class="card-body">
+          <h5 class="card-title">{{event.title}}</h5>
+          <h6 class="card-subtitle mb-2 text-muted">{{event.timestampStart * 1000 | date: 'dd.MM.yyy'}} - {{event.timestampEnd * 1000 | date: 'dd.MM.yyy'}}</h6>
+          <p class="card-text">{{event.description}}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
