--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -6,3 +6,13 @@ mat-card {
 .signin-content {
   padding: 60px 1rem;
 }
+
+.input-first {
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.input-last {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
