--- a/src/app/components/event/event.list.component.css
+++ b/src/app/components/event/event.list.component.css
@@ -6,3 +6,11 @@
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
 }
+
+.card-body .event-card-edit-button {
+  display: none;
+}
+
+.card-body:hover .event-card-edit-button {
+  display: block;
+}
